--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -3,7 +3,7 @@
 	border-radius: 10px;
 	background-color: #121212;
 	padding: 20px;
-	width: 82vw;
+	width: 80vw;
 }
 
 .dashboard nav {
@@ -25,7 +25,7 @@
 
 .dashboard__menu__list {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(15vw, 1fr));
 	list-style: none;
 	padding: 10px 20px;
 	gap: 20px;
@@ -36,16 +36,22 @@
 	display: grid;
 	place-items: center;
 	grid-template-columns: 1fr 2fr;
-	font-size: 1.2em;
 	border-radius: 8px;
 	border: 1px solid transparent;
 	padding: 0.6em 1.2em;
 	border-width: 1px;
 	font-size: 1em;
 	width: 100%;
-	height: 20vh;
+	height: 130px;
+	color: #adadad;
 	background-color: #1b1b1b;
 	border-color: #595959;
+}
+
+.dashboard__menu__list h1 {
+	font-size: 4em;
+	color: #ffffff;
+	margin: 0;
 }
 
 .dashboard__content {
@@ -60,7 +66,6 @@
 	flex-direction: column;
 	text-align: start;
 	align-self: start;
-	font-size: 1.2em;
 	border-radius: 8px;
 	border: 1px solid transparent;
 	padding: 0.8em 1.2em;
@@ -76,7 +81,6 @@
 	flex-direction: column;
 	text-align: start;
 	align-self: start;
-	font-size: 1.2em;
 	border-radius: 8px;
 	border: 1px solid transparent;
 	padding: 0.8em 1.2em;
@@ -84,7 +88,6 @@
 	border-width: 1px;
 	font-size: 1em;
 	width: 100%;
-	height: 20vh;
 	background-color: #1b1b1b;
 	border-color: #595959;
 }
