--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+
 :root {
-	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: "Source Sans 3";
 	line-height: 1.5;
 	font-weight: 400;
 
@@ -14,8 +16,7 @@
 }
 
 body {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	font-family: "Source Sans 3";
 	color: #ffffff;
 	background-color: #2d2d2d;
 	min-height: 100vh;
