--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ button {
 	transition: border-color 0.25s;
 	border-color: #595959;
 	border-width: 2px;
+	color: #fff;
 }
 button:hover {
 	border-color: #c2c2c2;
@@ -74,6 +75,7 @@ button:focus-visible {
 		color: #c2c2c2;
 	}
 	button {
+		color: #1d1d1d;
 		background-color: #f9f9f9;
 	}
 }
